Updating GUI & Assets
Udah aman banget urusan deck sama inventory, udah bisa nanem juga. Tinggal harus disinkronin sama class backend dan harus mulai concurrency